<resources>
    <string name="app_name">Startmining Unofficial</string>
    <string name="title_simulator">Simulator</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_options">Options</string>
    <string name="title_pools">Pools</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="balance">Balance : </string>
    <string name="total_payout"> Total payout : </string>
    <string name="next_payout"> Next payout : </string>
    <string name="days2reached">Days between payout : </string>
    <string name="earnings">Estimated earnings (24h) : </string>
    <string name="app_widget_description">Widget to track your reward and your date of payout</string>
    <string name="btc_address">btc_address</string>
    <string name="eth_address">eth_address</string>
    <string name="file_name">pref</string>
</resources>