<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.startmining.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_pools"
        android:name="com.example.startmining.ui.pools.PoolsFragment"
        android:label="@string/title_pools"
        tools:layout="@layout/fragment_pools" />

    <fragment
        android:id="@+id/navigation_simulator"
        android:name="com.example.startmining.ui.simulator.SimulatorFragment"
        android:label="@string/title_simulator"
        tools:layout="@layout/fragment_simulator" />

    <fragment
        android:id="@+id/navigation_options"
        android:name="com.example.startmining.ui.options.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
</navigation>
