<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:background="@drawable/bg">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance" />
        <TextView
            android:id="@+id/live_rewards"
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        <TextView
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="BTC" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_payout" />
        <TextView
            android:id="@+id/next_payout"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01/01" />
        <TextView
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days2reached" />
        <TextView
            android:id="@+id/reached_payout"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01" />
        <TextView
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Days" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earnings" />
        <TextView
            android:id="@+id/earnings"
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        <TextView
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="BTC" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_payout" />
        <TextView
            android:id="@+id/total_payout"
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        <TextView
            style="@style/BitcoinStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="BTC" />

    </GridLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>